<resources>
    <string name="app_name">Santé</string>
    <string name="sante">Welcome to Santé!</string>
    <string name="started">Please type in your name to get started:</string>
    <string name="edit_message" translatable="false">Full name</string>
    <string name="button_ok">OK</string>
    <string name="contact">CONTACT US</string>
    <string name="contact_us">In order to contact us, please use the following email: [coming soon]</string>
    <string name="contact_us_2">We\'re happy to answer all the questions or comments you may have about the app.</string>
    <string name="get_started">To scan a QR Code, click the button below:</string>
    <string name="med_waste">HOW TO DISPOSE OF MEDICAL WASTE</string>
    <string name="welcome">Welcome!</string>
    <string name="scan_barcode">SCAN QR CODE</string>
    <string name="result">The result from the scan will be displayed here</string>
    <string name="text_to_speech">READ RESULT</string>

    <string name="med_waste_explanation">There are many different steps one can take to ensure of the
        safe disposal of medical waste at home. For one, a medical waste container should be placed
        at your home. This medical waste box will than collect any item that encounters body fluids
        and or any solid waste that is being generated in the diagnosis, treatment or immunization of human.
        If one has any sharps that needs to be disposed of when home, one must have a “sharps container”.</string>
</resources>
